--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 <!-- ====================================================================== -->
 <footer class="bg-slate-800 text-slate-400">
     <div class="container mx-auto py-6 px-6 text-center">
-        <p>&copy; 2024 HydroCav Technologies. All Rights Reserved.</p>
+        <p>&copy; 2025 HydroCav. All Rights Reserved.</p>
     </div>
 </footer>
 
