Add HydroLoop standalone page with Liquid Glass design system and TDD approach

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <p>The HydroLoop delivers substantial <b>cost savings</b> on chemicals and labor, along with <b>lower maintenance and operational expenses</b>, providing a proven <b>return on investment within 12 to 18 months</b>. Beyond cost, it enhances guest satisfaction by <b>eliminating strong, unpleasant odors</b> caused by trichloramine and proactively preventing harmful microorganisms like Legionella, Cryptosporidium, and Pseudomonas. Designed for <b>easy integration and minimal downtime</b>, HydroLoop offers reliable, <b>fail-safe operation</b> against ventilation or mechanical issues, ensuring your facilities remain operational and your guests enjoy a superior, healthier experience.</p>
                 </div>
                 <div class="text-center">
-                    <button class="liquid-glass-button liquid-glass-button-large mt-8">Learn More</button>
+                    <a href="hydroloop.html" class="liquid-glass-button liquid-glass-button-large mt-8">Learn More About HydroLoop Technology</a>
                 </div>
             </div>
             <!-- Image Column -->
